# rustc-codegen-qir-dev

./: Cargo.toml  README.md  default.nix  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: build.yml  formatting.yml
crates/rustc_codegen_qir/: Cargo.toml  lib.rs
crates/rustc_codegen_qir/src/: context.rs  lib.rs  link.rs  lto.rs  qir_errors.rs
crates/rustc_codegen_qir/src/builder/: mod.rs  unknown.rs
crates/rustc_codegen_qir/src/codegen/: mod.rs  unknown.rs
examples/another_example/: Cargo.toml
examples/another_example/src/: main.rs
examples/bell/: Cargo.toml  example.rs
examples/bell/.cargo/: config
examples/bell/src/: lib.rs
examples/mini_core/: Cargo.toml
examples/mini_core/.cargo/: config
examples/mini_core/src/: lib.rs  mini_core.rs
examples/no_core/: Cargo.toml
examples/no_core/.cargo/: config
examples/no_core/src/: lib.rs
src/: lib.rs
