[workspace]

members = [
    "crates/*",
]

# Cargo virtual workspaces do not yet support examples, so we can either
# add the examples directory to the members and have them compile every time,
# or have it 'floating' so that it must be manually compiler outside of the
# workspace, shown below.
exclude = [
    "examples/bell",
    "examples/no_core",
]
