[package]
name = "rustc_codegen_qir"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.9.1"
log = "0.4.17"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }
serde = { version = "1.0", features = ["derive"] }

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
